testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignmentWithExport.errors.txt
a.js(5,9): error TS2339: Property 'prop' does not exist on type '{}'.
a.js(8,9): error TS2339: Property 'asyncMethod' does not exist on type '{}'.


==== a.js (2 errors) ====
    // this is a javascript file...
    
    export const Adapter = {};
    
    Adapter.prop = {};
            ~~~~
!!! error TS2339: Property 'prop' does not exist on type '{}'.
    
    // comment this out, and it works
    Adapter.asyncMethod = function() {}
            ~~~~~~~~~~~
!!! error TS2339: Property 'asyncMethod' does not exist on type '{}'.